package messages;

message LedCommand
{
	// LED ID and hex value.
	required int32 led_id = 1;
	required int32 rgbHex = 2;
}
